# PyWeb12

./: readme.md
hw12_07_02/: main.py  pyproject.toml  seed.py
hw12_07_02/migrations/: env.py
hw12_07_02/migrations/versions/: 97d8480495a5_init.py
hw12_07_02/src/: db.py
m12_01_01/D/: finish.py
m12_01_01/I/: finish.py
m12_01_01/L/: aggregation.py  composition.py  finish.py
m12_01_01/O/: finish.py
m12_01_01/O/practic_example/: data.json  data.yaml  storage.py
m12_01_01/S/: finish.py
m12_01_02/Behavioral/: app.logs  observer.py
m12_01_02/Creational/: singleton.py
m12_01_02/Creational/Factory/: class_factory.py  factory.py  func_factory.py
m12_01_02/Structural/: adapter.py  facade.py
m12_01_02/Structural/Decorator/: example.py  right_way.py
m12_02_01/web_10_new_project/: pyproject.toml
m12_02_01/web_10_poetry/: example.py  example_log.py  example_type.py  logger.py  main.logs  pyproject.toml
m12_02_01/web_10_poetry_init/: pyproject.toml
m12_02_01/web_10_vscode_pipenv/: main.py
m12_02_02/app_full/: Dockerfile  pyproject.toml
m12_02_02/app_pip/: main.py
m12_03_01/: 02_thread_like_class.py  03_thread_timer.py  06_event_thread.py  08_event_stop_start.py  11_pool_semaphore.py
m12_03_01/file/: main.py
m12_03_01/task_runner/: main.py
m12_03_02/: 03_process_join.py  12_pool.py  15_pipe.py  Pipfile
m12_03_02/file_sort/: main.py  main_pool.py  main_recursion.py  test.py
m12_03_02/task_runner/: main.py
m12_06_01/: create_table.sql  demodb.sqlite  insert_data.sql
m12_06_02/: alter_table.py  connection.py  create.py  create_tables.sql  hw06.sqlite  insert.py  main.py  pyproject.toml  select-hw.sql  select.py  update.py
m12_07_01/: core_example.py  orm_async_example.py  orm_example.py  orm_new_api_example.py  pyproject.toml  signup.py
m12_07_01/database/: repository.py
m12_07_02/: crud.py  main.py  pyproject.toml
m12_07_02/database/: db.py  models.py
m12_07_02/migrations/: env.py
m12_07_02/migrations/versions/: 3d53498000fb_add_table_contacts.py  bd7e3bdac9dc_init.py
m12_07_02/seeds/: contacts.py
m12_08_01/: data.json  main.py  pyproject.toml
m12_08_01/me_example/: app.py  main.py  models.py
m12_08_01/pm_example/: app.py
m12_08_02/: main.py  pyproject.toml  redis_cache.py
m12_08_02/app/: app.py  consumer.py  models.py
m12_08_02/example_celery/: app.py
m12_08_02/hello-world/: consumer.py  producer.py
m12_08_02/pub-sub/: consumer.py  producer.py
m12_08_02/tasks/: consumer.py  producer.py
m12_09_01/: index.html  main.py  pyproject.toml  ups.json
m12_09_01/war_info/: links.json  losses.json
m12_09_01/war_info/war_info/: pipelines.py
m12_09_01/war_info/war_info/spiders/: get_losses.py  get_urls.py
m12_09_02/: author.json  main.py  play.py  pyproject.toml  quotes.json  spider.py  test.py
m12_10_01/: pyproject.toml
m12_10_01/my_app/: db.sqlite3
m12_10_01/my_app/my_app/: settings.py  urls.py  wsgi.py
m12_10_01/my_app/photo_app/: apps.py  forms.py  models.py  urls.py  views.py
m12_10_01/my_app/photo_app/migrations/: 0001_initial.py
m12_10_01/my_app/photo_app/templates/photo_app/: base.html  pictures.html  upload.html
m12_10_02/: .dockerignore  Dockerfile  fly.toml  pyproject.toml
m12_10_02/my_app/: manage.py
m12_10_02/my_app/my_app/: asgi.py  settings.py  urls.py
m12_10_02/my_app/photo_app/: admin.py  models.py  urls.py  views.py
m12_10_02/my_app/photo_app/migrations/: 0002_picture_user_alter_picture_path.py
m12_10_02/my_app/photo_app/templates/photo_app/: base.html  change.html  index.html  pictures.html  upload.html
m12_10_02/my_app/users/: forms.py  urls.py  views.py
m12_10_02/my_app/users/templates/users/: login.html  logout.html  register.html
m12_10_additional/: pyproject.toml
m12_10_additional/todoapp/: config.ini  db.sqlite3
m12_10_additional/todoapp/infoboard/: tasks.py  urls.py  views.py
m12_10_additional/todoapp/infoboard/mongodb/: connect.py
m12_10_additional/todoapp/infoboard/templates/infoboard/: base.html  losses-list.html
m12_10_additional/todoapp/todo/: forms.py  models.py  urls.py  views.py
m12_10_additional/todoapp/todo/migrations/: 0001_initial.py
m12_10_additional/todoapp/todo/templates/todo/: base.html  create.html  delete.html  list.html  update.html
m12_10_additional/todoapp/todoapp/: celery.py  settings.py  urls.py
m12_11_01/: app.db  db.py  main.py  middleware.py  models.py  pyproject.toml  schemas.py
m12_11_02/backend/: main.py  pyproject.toml
m12_11_02/backend/migrations/versions/: 4e9b0782cad6_add_columns_completed.py
m12_11_02/backend/src/: schemas.py
m12_11_02/backend/src/database/: db.py  models.py
m12_11_02/backend/src/repository/: todos.py
m12_11_02/backend/src/routes/: todos.py
m12_12_01/: main.py  pyproject.toml  test.py
m12_12_01/migrations/versions/: a7e1c95d2f58_add_user.py
m12_12_01/src/database/: db.py  models.py
m12_12_01/src/repository/: todos.py
m12_12_01/src/routes/: todos.py
m12_12_02/: pyproject.toml
m12_12_02/migrations/: env.py
m12_12_02/src/conf/: config.py
m12_12_02/src/database/: models.py
m12_12_02/src/routes/: auth.py
m12_12_02/src/services/: auth.py
m12_12_02_base_fu/: main.py  pyproject.toml  test.db
m12_12_02_fu/: main.py  pyproject.toml
m12_12_02_fu/migrations/versions/: 1ce4e840b877_init.py
m12_12_02_fu/src/: schemas.py
m12_12_02_fu/src/conf/: config.py
m12_12_02_fu/src/database/: db.py  models.py  utils.py
m12_12_02_fu/src/repository/: users.py
m12_12_02_fu/src/routes/: auth.py  todos.py
m12_12_02_fu/src/services/: auth.py  roles.py
m12_12_02_jwt/: main.py  pyproject.toml
m12_12_02_jwt/src/repository/: todos.py
m12_12_02_jwt/src/routes/: auth.py  todos.py
m12_12_02_jwt/src/services/: auth.py  roles.py
m12_13_01/: docker-compose.yml  main.py  pyproject.toml
m12_13_01/src/: schemas.py
m12_13_02/: main.py  pyproject.toml
m12_14_01/: main.py  pyproject.toml  readme.md  requirements.txt  test.sqlite
m12_14_01/src/: schemas.py
m12_14_01/tests/: conftest.py  test_e2e_auth.py  test_e2e_todos.py  test_unit_repository_todo.py
(+100 files in other folders)
