[tool.poetry]
name = "m12-06-02"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m12_06_02"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.6"
faker = "^18.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
