[tool.poetry]
name = "m12-08-02"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m12_08_02"}]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.6.0"
redis-lru = "^0.1.2"
pika = "^1.3.2"
celery = "^5.3.1"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
