[tool.poetry]
name = "web-10-new-project"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "web_10_new_project"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
