[tool.poetry]
name = "web-10-poetry"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
#packages = [{include = "web_10_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "~2.30.0"
black = {extras = ["d"], version = "^23.3.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
